Archive2/28/b0c21e7c9ada1b/output
main.cpp: In function 'int main()':
main.cpp:6:24: error: invalid const_cast from type 'const int' to type 'int*'
     *const_cast<int*>(x) = 42;
                        ^
